new image added, progress var, lang, benf availb